V0 Manuscrit sans intro ni conclusion

--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -74,11 +74,13 @@ Nous utiliserons des représentations adaptées au cas d'une architecture à plu
 \centering
 \includegraphics[width=0.5\textwidth]{points2.png}
 \end{minipage}
-\caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique, dans le cas d'entrées sous forme d'imagettes ou de points en deux dimensions.\protect\footnote{Images tirées du \protect\href{polycopié d'apprentissage automatique}{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf} de CentraleSupelec Metz}}
+\caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique, dans le cas d'entrées sous forme d'imagettes ou de points en deux dimensions.\footnotemark}
 \end{figure}
-%\footnote{Images tirées du polycopié d'apprentissage automatique de CentraleSupelec Metz, 
-%\url{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}}
+
+
 \subsection{Limites des représentations classiques dans le cas d'une architecture CxSOM}
+
+\footnotetext{Images de SOMs tirées du \href{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}{polycopié d'apprentissage automatique} de CentraleSupelec Metz}
 
 Nous pouvons d'abord utiliser les représentations classiques mentionnées ci-dessus pour tracer les différentes couches de poids de chacun des cartes d'une architecture CxSOM à la fin de l'apprentissage.
 La fin de l'apprentissage est définie comme le moment où les poids ont convergé vers une organisation restant stable au cours des itérations $t$.
