--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,10 +1,10 @@
 \chapter*{Conclusion}
 
-Perspectives : 
+% Perspectives : 
 
-Mémoire associative pas forcément le cas d'étude le plus adapté à un contexte de modularité.
-Mémoires temporelles, interactions avec environnement vs modules d'apprentissage, \cite{Ellefsen2015NeuralMH}
-Apprentissage sur le long terme.
+% Mémoire associative pas forcément le cas d'étude le plus adapté à un contexte de modularité.
+% Mémoires temporelles, interactions avec environnement vs modules d'apprentissage, \cite{Ellefsen2015NeuralMH}
+% Apprentissage sur le long terme.
 
-Proximité avec modules récurrents pour une généralisation du modèle.
-Perspective : envisager d'autres cas d'utilisation du modèle, qui induisent d'autres architectures.
+% Proximité avec modules récurrents pour une généralisation du modèle.
+% Perspective : envisager d'autres cas d'utilisation du modèle, qui induisent d'autres architectures.
