--- a/titlepage.tex
+++ b/titlepage.tex
@@ -6,8 +6,8 @@
 % \President = {Le président &du jury}
 \Rapporteurs = {Madalina Olteanu & Université Paris Dauphine, CEREMADE\\
 Frédéric Alexandre & INRIA Bordeaux Sud-Ouest, Labri\\}
-\Examinateurs = {Mathias Quoy & CY-Univsersité Cergy\\
-Baya Lydia Boudjeloud-Assala & Université de Lorraine, LORIA}
+\Examinateurs = {Matthias Quoy & CY-Université Cergy\\
+Lydia Boudjeloud-Assala & Université de Lorraine, LORIA}
 \Encadrants = {Hervé Frezza-Buet & CentraleSupelec, LORIA\\
 Yann Boniface & Université de Lorraine, LORIA}
 \MakeThesisTitlePage
