V0 Manuscrit sans intro ni conclusion

--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -29,10 +29,11 @@ $u(x,t)$ s'exprime à partir d'une équation différentielle~; son évolution pr
 Le calcul du potentiel des DNF sur un stimulus d'entrée résulte en la formation de bulles d'activités dans les zones ou le signal d'entrée est élevé.
 
 Les DNF ont plusieurs applications possibles en fonction de leur paramétrage, comme le filtrage de bruit ou le suivi d'une cible positionnée en $x$.
-% Les DNF implémentent ainsi un mécanisme de \emph{Winner Take All} (WTA)~: leur potentiel trouve automatiquement une position (\emph{Winner}) qui représente le mieux un signal d'entrée.
 Comme le calcul du potentiel s'appuie uniquement sur un voisinage de $x$ en chaque point, les calculs permettant ce mécanisme Winner Take All sont cellulaires.
 A partir de cela, des DNF réagissant à plusieurs signaux d'entrée $s_i(x)$ peuvent être couplés en des architectures dynamiques exhibant des mécaniques complexes \cite{Fix2011ADN, Sandamirskaya2014DynamicNF}
-Le couplage de DNF permet d'envisager des comportements autonomes au sein des structures de DNF et non une seule réaction à l'entrée $s$. C'est également cette démarche qui avait amené la construction d'architectures de cartes auto-organisatrices cellulaires en\cite{khouzam_neural_2014,menard05}. Dans ces architectures, le choix des BMU est réalisé à partir du calcul de DNF couplés entre cartes.
+Le couplage de DNF permet d'envisager des comportements autonomes au sein des structures de DNF et non une seule réaction à l'entrée $s$. 
+La construction d'architectures de cartes auto-organisatrices cellulaires en~\cite{khouzam_neural_2014,menard05} utilise des DNF couplés entre cartes afin de choisir, de façon cellulaire, le BMU d'une carte, c'est à dire l'unité dont le poids va être mis à jour.
+Les architectures de cartes proposées dans ces travaux apportent alors un mécanisme d'apprentissage aux DNF qui sont eux seulement un processus dynamique réagissant aux entrées. Les DNF apportent quant à eux le calcul cellulaire manquant aux cartes auto-organisatrices classiques pour une implémentation au niveau du neurone.
 
 La recherche de BMU d'une carte de Kohonen implémente également un mécanisme de Winner Take All, mais dont le calcul est centralisé à l'échelle de la carte grâce au calcul de l'activation des neurones.
 Ce calcul centralisé nécessite moins de ressources de calcul que le calcul des DNF, qui s'appuie sur la résolution numérique d'une équation différentielle.
